# machine-learning-practice

./: .gitignore  README.md  docker-compose.yml
docs/: aws_rds_setup.md
ml-pipeline/: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
ml-pipeline/notebooks/: 01_grid_maker.ipynb  02_model_prototype.ipynb  04_hotspot_visualization.ipynb  05_donggurami_to_postgis.ipynb  06_postgis_to_grid_prototype.ipynb  07_model_training_prototype.ipynb  08_spatial_inference_prototype.ipynb  09_model_training_xgb_prototype.ipynb  10_spatial_inference_xgb_prototype.ipynb
ml-pipeline/src/: data_fetcher.py  dataset_builder.py  evaluator.py  feature_engineering.py  grid_maker.py  model_trainer.py  predictor.py  utils.py  visualizer.py
ml-pipeline/src/models/: pu_xgboost.py
ml-pipeline/tests/: conftest.py  test_dataset_builder.py  test_evaluator.py  test_feature_engineering.py  test_main.py  test_model_pipeline.py  test_pu_xgboost.py  test_utils.py
route-engine/: .gitignore  build.gradle  docker-compose.yml  settings.gradle
route-engine/src/main/java/: .gitkeep
route-engine/src/main/java/com/plobber/routing/: RouteEngineApplication.java
route-engine/src/main/java/com/plobber/routing/controller/: RouteController.java  RouteRequest.java
route-engine/src/main/java/com/plobber/routing/graphhopper/: CustomModelBuilder.java  GraphHopperConfig.java  PloggingTagParser.java
route-engine/src/main/resources/: application.yaml
route-engine/src/test/java/com/plobber/routing/: RouteEngineApplicationTests.java
tileserv/: docker-compose.yml
(+10 files in other folders)
