[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "osmnx>=2.1.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "xgboost>=3.2.0",
]
