[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2>=0.19.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "osmnx>=2.1.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.49",
    "typer>=0.25.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
